# API_CERTIFY

./: .gitignore  CONTRIBUTING.md  POSTMAN.md  README.md  REVIEW.md  env.example  pyproject.toml
api_certify/: dependencies.py  main.py
api_certify/core/: security.py
api_certify/core/database/: mongodb.py
api_certify/core/security/: hash_manager.py  jwt_manager.py
api_certify/exceptions/: __init__.py  custom_exceptions.py  exeptions.py  handlers.py
api_certify/models/: auth_institution_model.py  auth_model.py  certificate_model.py  event_model.py  institution_model.py  jwt_model.py
api_certify/repositories/: Institution_auth_repository.py  auth_repository.py  certificate_repository.py  event_repository.py  refresh_token_repository.py
api_certify/routes/v1/: auth.routes.py  auth_routes.py  certificate_routes.py  company_routes.py  event_routes.py  institution_auth_routes.py
api_certify/schemas/: company_schema.py  responses.py  token_schemas.py
api_certify/service/: Institution_auth_service.py  auth_service.py  certificate_service.py  event_service.py
tests/: conftest.py  test_auth.py  test_auth_service_jwt.py  test_certificate_repository.py  test_certificate_routes.py  test_certificates.py  test_company_repository.py  test_dependencies.py  test_dependencies_jwt.py  test_exceptions.py  test_jwt_manager.py  test_routes.py  test_security.py
